--- a/test/fixtures/subscriptions.yml
+++ b/test/fixtures/subscriptions.yml
@@ -1,11 +1,19 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+admin:
+  id:       1
+  email:    admin@b.ru
+  name:     Bob1
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+user1:
+  id:       2
+  email:    a@b.ru
+  name:     Bob2
+
+user2:
+  id:       3
+  email:    b@b.ru
+  name:     Bob3
+ 
+invited:
+  id:       4
+  email:    c@b.ru
+  name:     Bob4
