--- a/test/fixtures/roles_users.yml
+++ b/test/fixtures/roles_users.yml
@@ -2,6 +2,10 @@ admin_admin:
   role_id:  1
   user_id:  1
 
+admin_owner:
+  role_id:  2
+  user_id:  1
+
 owner_user1:
   role_id:  2
   user_id:  2
