--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,32 +7,38 @@ admin:
   email:    admin@b.ru
   encrypted_password: <%= pass %>
   confirmed_at: <%= confirmed_at %>
+  account_id: 1  
 
 user1:
   id:       2
   email:    a@b.ru
   encrypted_password: <%= pass %>
   confirmed_at: <%= confirmed_at %>
-  
+  account_id: 2
+
 user2:
   id:       3
   email:    b@b.ru
   encrypted_password: <%= pass %>
   confirmed_at: <%= confirmed_at %>
-  
+  account_id: 3
+
 user3:
   id:       4
   email:    c@b.ru
   encrypted_password: <%= pass %>
   confirmed_at: <%= confirmed_at %>
-  
+  account_id: 4
+
 invited:
   id:       5
   email:    invited@b.ru
   encrypted_password: <%= pass %>
   confirmed_at: <%= confirmed_at %>
-  
+  account_id: 1
+
 unconfirmed:
   id:       6
   email:    unconfirmed@b.ru
   encrypted_password: <%= pass %>
+  account_id: 5
