rails 6 + bundle up

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@
 # Ignore bundler config.
 /.bundle
 
-/Gemfile.lock
-
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
@@ -19,7 +17,25 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore uploaded files in development.
+/storage/*
+!/storage/.keep
+
+/public/assets
+.byebug_history
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/public/packs
+/public/packs-test
 /node_modules
 /yarn-error.log
+yarn-debug.log*
+.yarn-integrity
 
-.byebug_history
+# exclude Ruby mine
+*.iml
+/.idea
+/.generators
+/.raketasks
