--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "mediamaze",
   "private": true,
   "dependencies": {
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
     "turbolinks": "^5.2.0",
